--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -53,8 +53,10 @@ body {
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
+  font-family: cursive;
   .btn {
     font-size: 21px;
+    font-family: cursive;
     padding: 14px 24px;
   }
 }
