--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,15 @@
 $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
+// override bootstrap variables
+@import "variables";
 
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
+
+// site-specific styles
+// add additional stylesheets below
+@import "content";
+
 
 .browsehappy {
   margin: 0.2em 0;
