--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,7 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 // site-specific styles
 // add additional stylesheets below
 @import "content";
+@import "content_alternate";
 
 
 .browsehappy {
