--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -20,6 +20,7 @@ $brand-success:         #AA0000; // altered for wats 4010 assignment
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
+$bg-primary:      rgba($gray-lighter, .7);
 
 
 //== Scaffolding
