--- a/app/styles/_content.scss
+++ b/app/styles/_content.scss
@@ -1,3 +1,4 @@
+//main styling
 body {
 	color: green;
 	background-image: url('http://hdwallpaperbackgrounds.net/wp-content/uploads/2016/08/cool-white-background-9-1024x683.png');
@@ -17,6 +18,8 @@ body {
 .jumbotron {
 	background-color: $bg-primary;
 }
+
+
 .container .jumbotron {
 	@include border-top-radius(50px);
 	@include border-bottom-radius(50px);
