--- a/app/styles/_content_alternate.scss
+++ b/app/styles/_content_alternate.scss
@@ -1,8 +1,9 @@
+// class tag created when button is clicked. code located in main.js file
 .alternate-theme {
   background-image: url('http://wallpaper.zone/img/574241.jpg');
   background-size: cover;
 
-//
+  // alternate header style changes
   .header {
     // main style changes for header
     background-color: rgba($gray-lighter, .7);
@@ -18,15 +19,18 @@
       }
   } // end header alternate styles
 
+  // changed main text color of jumbotron from green to black.
   .jumbotron {
     color: black;
   }
 
+  // gave marketing and footer sections background colors $bg-primary
   .marketing, .footer {
     background-color: $bg-primary;
     padding: 20px;
   }
 
+  // marketing section styling
   .marketing {
     margin-bottom: 0px;
     @include border-top-radius(50px);
@@ -38,13 +42,14 @@
       p {
         color: $brand-success;
       }
-  }
+  }// end marketing alternate styling
 
+  // footer styling
   .footer{
     color: black;
     @include border-bottom-radius(50px);
-  }
+  }// end footer
 
 
 
-}
+} // end alternate-theme styling
